@@ -85,6 +85,8 @@ class JLanguage extends JClass
 	 * @since	1.5
 	 */
 	protected $_used = array();
+	protected $_counter 	= 0;
+	protected $_override 	= array();
 
 	/**
 	* Constructor activating the default information of the language.
@@ -96,6 +98,18 @@ class JLanguage extends JClass
 			$lang = $this->_default;
 		}
 		$this->setLanguage($lang);
+
+	$app = & JFactory::getApplication();
+		$filename = JPATH_BASE.DS.'language'.DS.'overrides'.DS.$lang.'.override.ini';
+		if ($contents = @file_get_contents( $filename ))
+		{
+			$registry	= new JRegistry();
+			$registry->loadINI($contents);
+			$this->_override = $registry->toArray( );
+			unset($registry);
+			unset($contents);
+		}
+
 		$this->load();
 	}
 
@@ -290,6 +304,9 @@ class JLanguage extends JClass
 	*/
 	function _load($filename, $extension = 'unknown', $overwrite = true)
 	{
+
+	$this->_counter++;
+
 		$result	= false;
 
 		if ($content = @file_get_contents($filename))
@@ -302,6 +319,9 @@ class JLanguage extends JClass
 			{
 				$this->_strings = $overwrite ? array_merge($this->_strings, $newStrings)
 					: array_merge($newStrings, $this->_strings);
+
+				$this->_strings = array_merge( $this->_strings, $this->_override); // add overrides
+
 				$result = true;
 			}
 		}
